--- a/src/app/pages/ncs/about/header/header.component.html
+++ b/src/app/pages/ncs/about/header/header.component.html
@@ -3,10 +3,10 @@
         <div class="d-flex align-items-center">
             <button type="button" class="btn btn-dark" routerLink="/ncs">
                 <i class="pi pi-home"></i>
-                Início
+                {{'import.home'| translate}}
             </button>
             <div class="text-box mr-3">
-                <p>Não Conformidade</p>
+                <p>{{'about.headerTitle'| translate}}</p>
             </div>
             <p-chip>
                 <i class="bi bi-ticket-perforated mr-2"></i>
@@ -17,11 +17,11 @@
     <div class="d-flex justify-content-end p-0">
         <div class="d-flex buttons">
             <button type="button" class="btn btn-dark mr-2 disabled">
-                Dados da NC
+                {{'global.ncData'| translate}}
                 <i class="bi bi-file-earmark-text"></i>
             </button>
             <button type="button" class="btn btn-dark mr-2">
-                Exportar NC
+                {{'about.export'| translate}}
                 <i class="bi bi-file-earmark-arrow-down"></i>
             </button>
         </div>
