--- a/src/app/pages/ncs/about/about.component.html
+++ b/src/app/pages/ncs/about/about.component.html
@@ -4,29 +4,28 @@
 </app-about-header>
 
 <p-tabView (onChange)="goCreateProp($event)">
-    <p-tabPanel header="Informações da NC" leftIcon="bi bi-file-earmark-richtext">
+    <p-tabPanel [header]="'about.viewNC'| translate" leftIcon="bi bi-file-earmark-richtext">
         <div class="content-box">
-            
             <app-view-nc></app-view-nc>
         </div>
     </p-tabPanel>
-    <p-tabPanel header="Proposta de Solução" leftIcon="bi bi-tools" >
+    <p-tabPanel [header]="'about.proposal'| translate" leftIcon="bi bi-tools" >
         <div class="content-box">
             <app-proposal></app-proposal>
         </div>
     </p-tabPanel>
-    <p-tabPanel header="Custos Incorridos" leftIcon="bi bi-coin">
+    <p-tabPanel [header]="'about.costs'| translate" leftIcon="bi bi-coin">
         <div class="content-box">
             <app-costs></app-costs>
         </div>
     </p-tabPanel>
-    <p-tabPanel header="Avaliação SGQ" leftIcon="bi bi-search">
+    <p-tabPanel [header]="'about.sgqEval'| translate" leftIcon="bi bi-search">
         <div class="content-box">
             
             <app-sgq-evaluation></app-sgq-evaluation>
         </div>
     </p-tabPanel>
-    <p-tabPanel header="Fechamento" leftIcon="bi bi-folder-check">
+    <p-tabPanel [header]="'about.closing'| translate" leftIcon="bi bi-folder-check">
         <div class="content-box">
             <app-closing></app-closing>
         </div>
